api-server/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server-service
  labels:
    role: app-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    role: app-server
